--- a/docs/style.css
+++ b/docs/style.css
@@ -387,7 +387,7 @@
  }
 
  .language-item.german:hover:after {
-    content: "German: B1 (Goethe-Zertifikat, 2023";
+    content: "German: B1 (Goethe-Zertifikat, 2023)";
  }
 
  .language-item.tagalog {
