--- a/docs/style.css
+++ b/docs/style.css
@@ -8,7 +8,7 @@
   --library: #e28936;
   --testing: #4c930e;
   --cms: #bf2a2a;
-  --database: #0f969a;
+  --database: #b11252;
   --framework: black;
   --platform: #136aa4;
 }
