--- a/docs/style.css
+++ b/docs/style.css
@@ -172,7 +172,7 @@ section h3 {
   display: grid;
   justify-content: start;
   align-items: center;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto 1fr;
   border-radius: 5px;
   gap: 2em;
   height: 15em;
